# rustyeyes3

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  REQUIREMENTS.md  build.rs  client.sh  config.json  get_model.sh  gitlog.txt  run.sh  svr_l2cs_x.model  svr_l2cs_y.model  svr_mobile_x.model  svr_mobile_y.model
.cargo/: config.toml
20251218calibration_data/: img_1765997461159.json  img_1766009741426.json  img_1766009748309.json  img_1766009752231.json  img_1766009756336.json  img_1766009761861.json  img_1766011333952.json  img_1766011341415.json  img_1766011347727.json  img_1766011363462.json  img_1766011375232.json  img_1766011382204.json  img_1766011387907.json  img_1766011391542.json  img_1766011396243.json  img_1766014687025.json  img_1766014689716.json  img_1766014697788.json  img_1766014708127.json  img_1766014710360.json  img_1766014715193.json  img_1766014719643.json  img_1766014739324.json
20251218calibration_data/reports/: calibration_history.json  calibration_report_l2cs_20251217_234924.json  calibration_report_l2cs_20251218_000147.json  calibration_report_l2cs_20251218_080632.json  calibration_report_l2cs_20251218_082051.json  calibration_report_l2cs_20251218_082230.json  calibration_report_l2cs_20251218_082408.json  calibration_report_l2cs_20251218_082726.json  calibration_report_l2cs_20251218_083521.json  calibration_report_mobile_20251217_234924.json  calibration_report_mobile_20251218_000147.json  calibration_report_mobile_20251218_080632.json  calibration_report_mobile_20251218_082051.json  calibration_report_mobile_20251218_082230.json  calibration_report_mobile_20251218_082408.json  calibration_report_mobile_20251218_082726.json  calibration_report_mobile_20251218_083521.json
calibration_data/: img_1766068421832.json  img_1766068428071.json  img_1766068433975.json  img_1766068437076.json  img_1766068439840.json  img_1766068442984.json  img_1766068446352.json  img_1766068448724.json  img_1766068452322.json
calibration_data/reports/: calibration_history.json  calibration_report_l2cs_20251218_093602.json  calibration_report_l2cs_20251218_094120.json  calibration_report_l2cs_20251218_094702.json  calibration_report_l2cs_20251218_095517.json  calibration_report_l2cs_20251218_100704.json  calibration_report_l2cs_20251218_101327.json  calibration_report_l2cs_20251218_103959.json  calibration_report_l2cs_20251218_104839.json  calibration_report_l2cs_20251218_112714.json  calibration_report_mobile_20251218_093602.json  (+8 more)
deepstream/: README.md  config_face_mesh.txt  config_test_simple.txt  run_face_pipeline.sh  run_gstreamer_inference.sh  setup_dgx.sh
docs/: verification.md
models/: README.md
remote_server/: README.md  deploy.sh  gaze_stream.proto  requirements.txt  server.py  subscriber_example.py  test_stream.py
research/: detection_noise.txt  realtime-eyepupil-tracking-report.txt  strategic_review.md
scripts/: README.md  bump_version.sh  deploy_jetson.sh  download_moondream.py  moondream_server.py  prepare_dataset.py  receive_stream_dgx.sh  release.sh  requirements.txt  setup_jetson.sh  setup_models.sh  stream_camera.sh  sync_clocks.sh  test_server.sh  train_remote.py
specs/: CALIBRATION_SPEC.md  CORE_SPEC.md  DEEPSTREAM_RESEARCH.txt  Next.md  OVERLAY_SPEC.md  QA_PROTOCOLS.md  REGRESSION_TESTS.md  RELEASE_PIPELINE.md  USER_INTERFACE.md  calibration.md  custom_model_training.md  distributed_gaze.md  nvidia_metropolis_gaze.md
src/: args.rs  calibration.rs  camera.rs  config.rs  detector.rs  font.rs  gaze.rs  gaze_tests.rs  head_pose.rs  inference.rs  lib.rs  main.rs  main.rs.bak  moondream.rs  output.rs  overlay.rs  overlay_sidecar.swift  pipeline.rs  rectification.rs  streaming.rs  ttf.rs  types.rs
src/streaming/: grpc_client.rs  (+1 more)
tests/: gaze_smoke_test.rs
(+6 files in other folders)
