[package]
name = "rusty-eyes"
version = "0.1.0"
edition = "2021"
default-run = "rusty-eyes"

[dependencies]
nokhwa = { version = "0.10", features = [
    "input-v4l",          # For Linux
    "input-avfoundation",  # For macOS
    "input-msmf"          # For Windows
] }
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
image = "0.25"
objc = "0.2"
cocoa = "0.24"
colored = "2"
minifb = "0.24"
rusttype = "0.9"
ort = { version = "2.0.0-rc.9", features = ["coreml", "download-binaries"] }
ndarray = "0.15"

# Moondream / Candle
candle-core = "0.8.2"
candle-transformers = "0.8.2"
candle-nn = "0.8.2"
tokenizers = "0.20"
hf-hub = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
regex = "1.10"
