[package]
name = "rusty-eyes"
version = "0.2.9"
edition = "2021"
default-run = "rusty-eyes"

[features]
default = ["onnx"]
onnx = ["dep:ort"]

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
nokhwa = { version = "0.10", features = ["input-v4l"] }
ort = { version = "2.0.0-rc.9", features = ["download-binaries"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
nokhwa = { version = "0.10", features = ["input-avfoundation"] }
objc = "0.2"
cocoa = "0.24"
ort = { version = "2.0.0-rc.9", features = ["coreml", "download-binaries"], optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
nokhwa = { version = "0.10", features = ["input-msmf"] }
ort = { version = "2.0.0-rc.9", features = ["download-binaries"], optional = true }

[dependencies]
# Shared dependencies
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
image = "0.25"
colored = "2"
minifb = "0.24"
rusttype = "0.9"
ndarray = "0.15"
bincode = "1.3"
smartcore = { version = "0.3.2", features = ["serde"] }
rand = "0.8"
log = "0.4"
simplelog = "0.12"

# Moondream / Candle
candle-core = "0.8.2"
candle-transformers = "0.8.2"
candle-nn = "0.8.2"
tokenizers = "0.20"
hf-hub = "0.3.2"
# gRPC / Protobuf
tonic = "0.11"
tonic-health = "0.11"
prost = "0.12"
prost-types = "0.12"
tokio-stream = "0.1"
tower = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
regex = "1.10"
winit = "0.30.12"
softbuffer = "0.4.8"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.21", features = ["xlib", "xfixes"] }
gstreamer = { version = "0.18", features = ["v1_14"] }
gstreamer-app = "0.18"
gstreamer-video = "0.18"
gstreamer-rtsp-server = "0.18"
glib = "0.15"


# These bins require the onnx feature
[[bin]]
name = "calibrate"
required-features = ["onnx"]

[[bin]]
name = "check_bins"
required-features = ["onnx"]

[[bin]]
name = "debug_crop"
required-features = ["onnx"]

[[bin]]
name = "analyze_multivariate"
required-features = ["onnx"]

[[bin]]
name = "inspect_onnx"
required-features = ["onnx"]

[[bin]]
name = "inspect_model"
required-features = ["onnx"]

[build-dependencies]
tonic-build = "0.11"
